--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="@dimen/padding_normal"
-        android:src="@drawable/food" />
+        android:src="@drawable/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
